Demo-Spring-Docker/kubernetes/kubernetes-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-api
  labels:
    app: hello-world-api
spec:
  containers:
    - name: hello-world-api
      image: vipcube/demo-spring-hello-world
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
