Demo-Spring-Docker/kubernetes/kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api
spec:
  selector:
    app: hello-world-api
  ports:
    - port: 18080
      nodePort: 30001
      targetPort: 8080
  type: NodePort
